# CoTLab

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile.rocm  LICENSE  README.md  docker-compose.rocm.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml  tests.yml
api/core/: index.html
api/experiments/: index.html
api/prompts/: index.html
conf/: config.yaml
conf/backend/: transformers.yaml  transformers_mps.yaml  vllm.yaml
conf/dataset/: afrimedqa.yaml  cardiology.yaml  histopathology.yaml  medmcqa.yaml  medqa.yaml  medxpertqa.yaml  mmlu_medical.yaml  neurology.yaml  oncology.yaml  patching_pairs.yaml  pediatrics.yaml  probing_diagnosis.yaml  pubmedqa.yaml  radiology.yaml  synthetic.yaml  tcga.yaml
conf/experiment/: activation_compare.yaml  activation_patching.yaml  attention_analysis.yaml  classification.yaml  (+12 more)
data/: Patching_Pairs_Data.csv  Pediatrics_Synthetic_Data.csv  Radiology_Synthetic_Data.csv  Synthetic_Medical_Data.csv  cardiology.json  datasets.yaml  histopathology.tsv  neurology.json  oncology.json  patching_pairs.json  pediatrics.json  probing_diagnosis.json  radiology.json  synthetic.json  tutorial.json
docs/: index.md  rocm-setup.md
notebooks/: cotlab_tutorial.ipynb
rocm-setup/: index.html
scripts/: analyze_json_compliance.py  compare_json_vs_freetext.py  cotlab-rocm.sh
search/: search_index.json
tests/: conftest.py  test_analysis.py  test_backends.py  test_core.py  test_datasets.py  test_experiment_docs.py  test_experiments.py  test_patching.py  test_prompts.py
(+118 files in other folders)
