[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cotlab"
dynamic = ["version"]
description = "CoTLab - Chain of Thought Research Toolkit for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Hüseyin Çavuş" }
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
cuda = [
    "vllm>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.4",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
cotlab = "cotlab.main:main"

[tool.hatch.version]
path = "src/cotlab/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cotlab"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F821"]  # F821 = undefined name (for forward refs)

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
no_implicit_optional = false
